Update heading text for Hand Scanning Animation to reflect project branding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="hand">
                <div class="lines"></div>
           </div>
-          <h3>Hand Print Scanning</h3>
+          <h3>ORMIK EXPLORE 2025 - STARTING...</h3>
      </div>
      <!-- partial -->
 
